# cord-ripper

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  logging.rs  main.rs
src/discord/: errors.rs  mod.rs
src/discord/bot/: bot_core.rs  mod.rs
src/discord/commands/: eject_disc.rs  get_titles.rs  mod.rs  rip.rs  view_drives.rs
src/discord/components/: mod.rs
src/makemkv/: errors.rs  makemkv_core.rs  makemkv_helpers.rs  mod.rs
