[package]
name = "cord-ripper"
version = "0.0.9"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
fs_extra = "1.3.0"
lazy_static = "1.5.0"
serenity = { version = "0.12.4", features = ["collector", "model"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
